[package]
name = "hyper-test"
version = "0.1.0"
authors = ["Eric Crowder <ebcrowder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
bytes = "0.5.4"
futures = "0.3"
futures-util = "0.3"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"